--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
-body {
+html
+{
+  min-height: 100vh;
+}
+
+/* body
+{
+  height: 100%;
+} */
+
+body
+{
+  background-color: moccasin;
+  min-height: 100vh;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +21,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code
+{
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
